--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "cloud-storage"
+name = "cloud_storage"
 version = "0.1.0"
 description = ""
 authors = ["markin-2002 <markin-2002@yandex.ru>"]
@@ -8,7 +8,15 @@ packages = [{include = "cloud_storage"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+fastapi = "^0.88.0"
+requests = "^2.28.1"
+SQLAlchemy = "^1.4.46"
+uvicorn = "^0.20.0"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.0"
+pylint = "^2.15.9"
 
 [build-system]
 requires = ["poetry-core"]
