--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = "^0.88.0"
 requests = "^2.28.1"
 SQLAlchemy = "^1.4.46"
 uvicorn = "^0.20.0"
+python-multipart = "^0.0.5"
 
 
 [tool.poetry.group.dev.dependencies]
