--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,17 @@ packages = [{include = "cloud_storage"}]
 python = "^3.11"
 fastapi = "^0.88.0"
 requests = "^2.28.1"
-SQLAlchemy = "^1.4.46"
 uvicorn = "^0.20.0"
 python-multipart = "^0.0.5"
+SQLAlchemy = "^1.4.46"
+pydantic = "^1.10.4"
+email-validator = "^1.3.0"
+asyncpg = "^0.27.0"
+greenlet = "^2.0.1"
+alembic = "^1.9.1"
+python-dotenv = "^0.21.0"
+psycopg2-binary = "^2.9.5"
+fastapi-users = "^10.2.1"
 
 
 [tool.poetry.group.dev.dependencies]
