--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,9 @@ greenlet = "^2.0.1"
 alembic = "^1.9.1"
 python-dotenv = "^0.21.0"
 psycopg2-binary = "^2.9.5"
-fastapi-users = "^10.2.1"
+python-jose = "^3.3.0"
+passlib = "^1.7.4"
+bcrypt = "^4.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
