--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ requests = "^2.28.1"
 uvicorn = "^0.20.0"
 python-multipart = "^0.0.5"
 SQLAlchemy = "^1.4.46"
-pydantic = "^1.10.4"
 email-validator = "^1.3.0"
 asyncpg = "^0.27.0"
 greenlet = "^2.0.1"
@@ -23,6 +22,7 @@ psycopg2-binary = "^2.9.5"
 python-jose = "^3.3.0"
 passlib = "^1.7.4"
 bcrypt = "^4.0.1"
+python-magic = "^0.4.27"
 
 
 [tool.poetry.group.dev.dependencies]
